--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "mysql": "^2.13.0",
     "cheerio": "^0.22.0",
+    "express": "^4.15.3",
+    "fuse": "^0.4.0",
+    "fuse.js": "^3.0.3",
+    "fuzzy": "^0.1.3",
+    "mysql": "^2.13.0",
     "node-fetch": "^1.6.3",
     "osmosis": "^1.1.4",
     "request": "^2.81.0",
