--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "body-parser": "^1.17.2",
     "cheerio": "^0.22.0",
     "express": "^4.15.3",
-    "fuse": "^0.4.0",
     "fuse.js": "^3.0.3",
     "fuzzy": "^0.1.3",
     "mysql": "^2.13.0",
@@ -35,8 +34,11 @@
   },
   "devDependencies": {
     "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-handlebars": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-nodemon": "^0.5.4",
+    "grunt-contrib-watch": "^1.0.0",
+    "open": "0.0.5"
   }
 }
