Updated grunt file to allow starting server and launching browser by typing grunt rtfm (or just grunt) at command line. This also allows for live-reloading of handlebars templates and other assets (just hit refresh in bbrowser to see changes after saving file.

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-nodemon": "^0.5.4",
     "grunt-contrib-watch": "^1.0.0",
+    "nodemon": "^1.11.0",
     "open": "0.0.5"
   }
 }
