--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-contrib-nodemon": "^0.5.4",
     "grunt-contrib-watch": "^1.0.0",
     "nodemon": "^1.11.0",
-    "open": "0.0.5"
+    "open": "0.0.5",
+    "strict-uri-encode": "^2.0.0"
   }
 }
