Added sequelize for jquery and express storage.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^3.30.4"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "grunt": "^1.0.1",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-concat": "^1.0.1",
