--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "rtfm",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "root",
