modified package.json and config.json for heroku deployment.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_HOST="localhost"
 DB_USER="root"
 DB_PASS=""
+JAWSDB_URL='mysql://p78x7ogxekj02h2w:lvs4ow7qv19lecj7@l7cup2om0gngra77.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/urzhogsr02s3hqjx'
