--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "http": "0.0.0",
     "mysql": "^2.13.0",
     "request": "^2.81.0",
-    "sequelize": "^3.30.4"
+    "sequelize": "^3.30.4",
+    "cheerio": "^0.22.0",
+    "osmosis": "^1.1.4"
   },
   "devDependencies": {
-    "cheerio": "^0.22.0",
-    "osmosis": "^1.1.4",
+
     "node-fetch": "^1.6.3",
     "scrape-mdn": "^1.0.2",
     "dotenv": "^4.0.0",
