More failed attempts at belongs to many associations

--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
     "password": null,
     "database": "rtfm",
     "host": "localhost",
-    "dialect": "mysql",
-    "logging": false
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
